{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 1,
  "lineage": "9b04108b-b422-e2b8-facd-cc1269e41ba0",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:866491048207:network-acl/acl-0c3c167e16529318a",
            "default_network_acl_id": "acl-0c3c167e16529318a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0c3c167e16529318a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "866491048207",
            "subnet_ids": [
              "subnet-027de6bb8bef27f61",
              "subnet-0b8c2884566060f7e",
              "subnet-0daad18573c57aaca",
              "subnet-0ddfdc1d1a8666843"
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-05a0c6f888e954adf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:866491048207:route-table/rtb-00d8000d439c098fe",
            "default_route_table_id": "rtb-00d8000d439c098fe",
            "id": "rtb-00d8000d439c098fe",
            "owner_id": "866491048207",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "best-imgmgr"
            },
            "tags_all": {
              "Name": "best-imgmgr"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a0c6f888e954adf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0e48abc9b91411294",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-35-165-19-208.us-west-2.compute.amazonaws.com",
            "public_ip": "35.165.19.208",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "best-imgmgr-us-west-2a"
            },
            "tags_all": {
              "Name": "best-imgmgr-us-west-2a"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0a5e14d250ffa0fd4",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-35-85-252-149.us-west-2.compute.amazonaws.com",
            "public_ip": "35.85.252.149",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "best-imgmgr-us-west-2b"
            },
            "tags_all": {
              "Name": "best-imgmgr-us-west-2b"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:866491048207:internet-gateway/igw-03d137d39da74374c",
            "id": "igw-03d137d39da74374c",
            "owner_id": "866491048207",
            "tags": {
              "Name": "best-imgmgr"
            },
            "tags_all": {
              "Name": "best-imgmgr"
            },
            "vpc_id": "vpc-05a0c6f888e954adf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e48abc9b91411294",
            "connectivity_type": "public",
            "id": "nat-07d9aa5a6069035a5",
            "network_interface_id": "eni-0c5ee17d6d9baebfb",
            "private_ip": "10.132.130.19",
            "public_ip": "35.165.19.208",
            "subnet_id": "subnet-0b8c2884566060f7e",
            "tags": {
              "Name": "best-imgmgr-us-west-2a"
            },
            "tags_all": {
              "Name": "best-imgmgr-us-west-2a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5e14d250ffa0fd4",
            "connectivity_type": "public",
            "id": "nat-0c3e5e9ecc0def1e7",
            "network_interface_id": "eni-08f12dc7f6fcdab9a",
            "private_ip": "10.132.131.39",
            "public_ip": "35.85.252.149",
            "subnet_id": "subnet-0ddfdc1d1a8666843",
            "tags": {
              "Name": "best-imgmgr-us-west-2b"
            },
            "tags_all": {
              "Name": "best-imgmgr-us-west-2b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-032c68b9a7102aaa71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07d9aa5a6069035a5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-032c68b9a7102aaa7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02c1385535f9e9a4b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c3e5e9ecc0def1e7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02c1385535f9e9a4b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03d137d39da74374c",
            "id": "r-rtb-035ab20624c597d2a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-035ab20624c597d2a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:866491048207:route-table/rtb-032c68b9a7102aaa7",
            "id": "rtb-032c68b9a7102aaa7",
            "owner_id": "866491048207",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "best-imgmgr-private-us-west-2a"
            },
            "tags_all": {
              "Name": "best-imgmgr-private-us-west-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a0c6f888e954adf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:866491048207:route-table/rtb-02c1385535f9e9a4b",
            "id": "rtb-02c1385535f9e9a4b",
            "owner_id": "866491048207",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "best-imgmgr-private-us-west-2b"
            },
            "tags_all": {
              "Name": "best-imgmgr-private-us-west-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a0c6f888e954adf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:866491048207:route-table/rtb-035ab20624c597d2a",
            "id": "rtb-035ab20624c597d2a",
            "owner_id": "866491048207",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "best-imgmgr-public"
            },
            "tags_all": {
              "Name": "best-imgmgr-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a0c6f888e954adf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7744fb43947ed63",
            "route_table_id": "rtb-032c68b9a7102aaa7",
            "subnet_id": "subnet-027de6bb8bef27f61"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfcaa796a5bddbcc",
            "route_table_id": "rtb-02c1385535f9e9a4b",
            "subnet_id": "subnet-0daad18573c57aaca"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00859f5f90dc766d2",
            "route_table_id": "rtb-035ab20624c597d2a",
            "subnet_id": "subnet-0b8c2884566060f7e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0175c0e4a81659dd1",
            "route_table_id": "rtb-035ab20624c597d2a",
            "subnet_id": "subnet-0ddfdc1d1a8666843"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:866491048207:subnet/subnet-027de6bb8bef27f61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.132.128.0/24",
            "id": "subnet-027de6bb8bef27f61",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "866491048207",
            "tags": {
              "Name": "best-imgmgr-private-us-west-2a"
            },
            "tags_all": {
              "Name": "best-imgmgr-private-us-west-2a"
            },
            "vpc_id": "vpc-05a0c6f888e954adf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:866491048207:subnet/subnet-0daad18573c57aaca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.132.129.0/24",
            "id": "subnet-0daad18573c57aaca",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "866491048207",
            "tags": {
              "Name": "best-imgmgr-private-us-west-2b"
            },
            "tags_all": {
              "Name": "best-imgmgr-private-us-west-2b"
            },
            "vpc_id": "vpc-05a0c6f888e954adf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:866491048207:subnet/subnet-0b8c2884566060f7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.132.130.0/24",
            "id": "subnet-0b8c2884566060f7e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "866491048207",
            "tags": {
              "Name": "best-imgmgr-public-us-west-2a"
            },
            "tags_all": {
              "Name": "best-imgmgr-public-us-west-2a"
            },
            "vpc_id": "vpc-05a0c6f888e954adf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:866491048207:subnet/subnet-0ddfdc1d1a8666843",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.132.131.0/24",
            "id": "subnet-0ddfdc1d1a8666843",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "866491048207",
            "tags": {
              "Name": "best-imgmgr-public-us-west-2b"
            },
            "tags_all": {
              "Name": "best-imgmgr-public-us-west-2b"
            },
            "vpc_id": "vpc-05a0c6f888e954adf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:866491048207:vpc/vpc-05a0c6f888e954adf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.132.128.0/21",
            "default_network_acl_id": "acl-0c3c167e16529318a",
            "default_route_table_id": "rtb-00d8000d439c098fe",
            "default_security_group_id": "sg-0fa80bcb8089d335c",
            "dhcp_options_id": "dopt-5fe59827",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05a0c6f888e954adf",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00d8000d439c098fe",
            "owner_id": "866491048207",
            "tags": {
              "Name": "best-imgmgr"
            },
            "tags_all": {
              "Name": "best-imgmgr"
            }
          }
        }
      ]
    }
  ]
}